main/default/objects/Impact_Capture__c/Impact_Capture__c.object-meta.xml
<CustomObject>
    <label>Impact Capture</label>
    <nameField>
        <displayFormat>CI-{00000}</displayFormat>
        <label>Change Impact ID#</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Impact Capture</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>