main/default/objects/Impact_Capture__c/fields/Business_impact__c.field-meta.xml
<CustomField>
    <fullName>Business_impact__c</fullName>
    <label>Business impact</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>