main/default/objects/Impact_Capture__c/fields/Capture_ID__c.field-meta.xml
<CustomField>
    <fullName>Capture_ID__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Capture ID#</label>
    <referenceTo>Compass_Capture__c</referenceTo>
    <relationshipLabel>Impact Capture</relationshipLabel>
    <relationshipName>Impact_Capture</relationshipName>
    <type>Lookup</type>
</CustomField>