main/default/objects/Impact_Capture__c/fields/Impact_Area__c.field-meta.xml
<CustomField>
    <fullName>Impact_Area__c</fullName>
    <label>Impact Area</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>