main/default/objects/Impact_Capture__c/fields/Impact_Date_Indentified__c.field-meta.xml
<CustomField>
    <fullName>Impact_Date_Indentified__c</fullName>
    <label>Impact Date Indentified</label>
    <type>Date</type>
</CustomField>