main/default/objects/Impact_Capture__c/fields/Recommendation__c.field-meta.xml
<CustomField>
    <fullName>Recommendation__c</fullName>
    <label>Recommendation</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Review Required</fullName>
            </value>
            <value>
                <fullName>Review Completed</fullName>
            </value>
            <value>
                <fullName>Review Requested</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>