main/default/objects/Impact_Capture__c/fields/Recommendation_Details__c.field-meta.xml
<CustomField>
    <fullName>Recommendation_Details__c</fullName>
    <label>Recommendation Details</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>