main/default/objects/Impact_Capture__c/fields/Role_Impact__c.field-meta.xml
<CustomField>
    <fullName>Role_Impact__c</fullName>
    <label>Role Impact</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>