main/default/objects/Impact_Capture__c/fields/Solution_Impact__c.field-meta.xml
<CustomField>
    <fullName>Solution_Impact__c</fullName>
    <label>Solution Impact</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>